# gear-dlmalloc

./: Cargo.toml  README.md
.github/workflows/: main.yml
examples/: hello.rs
src/: common.rs  dlmalloc.rs  dlverbose.rs  global.rs  lib.rs  linux.rs  macos.rs  wasm.rs  windows.rs
tests/: global.rs  smoke.rs
