[package]
name = "gear-dlmalloc"
version = "0.1.5"
authors = ["Alex Crichton <alex@alexcrichton.com>", "Gear Technologies"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/gear-tech/gear"
homepage = "https://github.com/alexcrichton/dlmalloc-rs"
documentation = "https://docs.rs/dlmalloc"
description = """
A Rust port of the dlmalloc allocator
"""

[package.metadata.docs.rs]
features = ['global']

[lib]
doctest = false

[target.'cfg(all(unix, not(target_arch = "wasm32")))'.dependencies]
libc = { version = "0.2.101", default-features = false }
libc-print = "0.1"

[dependencies]
# For more information on these dependencies see rust-lang/rust's
# `src/tools/rustc-std-workspace` folder
core = { version = '1.0.0', optional = true, package = 'rustc-std-workspace-core' }
compiler_builtins = { version = '0.1.0', optional = true }
str-buf = "3.0.2"
static_assertions = "1.1"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
page_size = "0.6.0"

[dev-dependencies]
rand = "0.8.5"

[features]
default = ["global"]

# Enable implementations of the `GlobalAlloc` standard library API, exporting a
# new `GlobalDlmalloc` as well which implements this trait.
global = []

# Enable very expensive debug checks
checks = ["debug"]

# Enable debug assertions
debug = []

# Verbose allocator work actions
verbose = []
